@@ -9,21 +9,14 @@ import jsonvalues.JsValue;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Random;
 import java.util.function.Supplier;
-import java.util.random.RandomGenerator;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.requireNonNull;
 
 public final class JsTupleGen implements Gen<JsArray> {
     private final List<Gen<? extends JsValue>> gens = new ArrayList<>();
-
-
-    @SafeVarargs
-    public static Gen<JsArray> of(final Gen<? extends JsValue> gen,
-                                  final Gen<? extends JsValue>... others
-    ) {
-        return new JsTupleGen(gen, others);
-    }
 
 
     @SafeVarargs
@@ -35,14 +28,25 @@ public final class JsTupleGen implements Gen<JsArray> {
         gens.addAll(Arrays.asList(requireNonNull(others)));
     }
 
+    @SafeVarargs
+    public static Gen<JsArray> of(final Gen<? extends JsValue> gen,
+                                  final Gen<? extends JsValue>... others
+    ) {
+        return new JsTupleGen(gen,
+                              others);
+    }
+
     @Override
-    public Supplier<JsArray> apply(final RandomGenerator random) {
+    public Supplier<JsArray> apply(final Random random) {
         requireNonNull(random);
-        var suppliers = gens.stream().map(it -> it.apply(SplitGen.DEFAULT.apply(random))).toList();
+        List<Supplier<? extends JsValue>> suppliers =
+                gens.stream()
+                    .map(it -> it.apply(SplitGen.DEFAULT.apply(random)))
+                    .collect(Collectors.toList());
         return () ->
         {
             JsArray array = JsArray.empty();
-            for (var supplier : suppliers) array = array.append(supplier.get());
+            for (Supplier<? extends JsValue> supplier : suppliers) array = array.append(supplier.get());
             return array;
         };
     }
